--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -93,6 +93,35 @@ editProfile=Edit profile
 deleteAccount=Delete Account
 #user-profile-edit.html
 save=save
+#dto exceptions
+property.should.not.be.null=Property should not be null.
+property.should.not.be.empty=Property should not be empty.
+property.should.not.be.null.or.empty=Property should not be null or empty.
+property.should.be.in.valid.format=Property should be in valid format.
+property.should.be.positive=Property should be a positive number.
+#UserProfileDTO
+username.should.be.between=Username should be between 5 and 25 symbols.
+user.role.should.be.either=Role should either STANDARD or ADMINISTRATOR.
+#QuestionCreateDTO
+points.should.be.a.number=Points should be a number.
+points.should.be.up.to=Points should be up to 100.
+#TestCreateDTO
+test.name.should.be.between=Test name should be between 5 and 25 symbols.
+description.should.be.up.to=Description should be up to 50 symbols.
+code.should.contain=Code should contain 2 letter, 2 digits and 2 special symbols.
+response.time.should.be.up.to=Response time should up to 10 minutes.
+passing.score.should.be=Passing score should be 0 or more.
+passing.score.should.be.up.to=Passing score should be up to 100.
+questions.count.should.be.up.to=Questions count should be up to 50 questions.
+status.should.be.either=Status should be either OPEN or CLOSED.
+#UserSignUpDTO
+password.should.be.at.least=Password should be at least 8 symbols.
+
+
+
+
+
+
 
 
 
