--- a/src/main/resources/i18n/messages_bg.properties
+++ b/src/main/resources/i18n/messages_bg.properties
@@ -93,3 +93,26 @@ editProfile=Редактиране на профил
 deleteAccount=Изтриване на акаунт
 #user-profile-edit.html
 save=запази
+#dto exceptions
+property.should.not.be.null=Свойството не трябва да бъде нулево.
+property.should.not.be.empty=Свойството не трябва да бъде празно.
+property.should.not.be.null.or.empty=Свойството не трябва да бъде нулево или празно.
+property.should.be.in.valid.format=Свойството трябва да бъде във валиден формат.
+property.should.be.positive=Свойството трябва да бъде положително число.
+#UserProfileDTO
+username.should.be.between=Потребителското име трябва да бъде между 5 и 25 символа.
+user.role.should.be.either=Ролята трябва да бъде или СТАНДАРТНА или АДМИНИСТРАТОР.
+#QuestionCreateDTO
+points.should.be.a.number=Точките трябва да бъдат число.
+points.should.be.up.to=Точките трябва да бъдат до 100.
+#TestCreateDTO
+test.name.should.be.between=Името на теста трябва да бъде между 5 и 25 символа.
+description.should.be.up.to=Описанието трябва да бъде до 50 символа.
+code.should.contain=Кодът трябва да съдържа 2 букви, 2 цифри и 2 специални символа.
+response.time.should.be.up.to=Времето за отговор трябва да бъде до 10 минути.
+passing.score.should.be=Проходният резултат трябва да бъде 0 или повече.
+passing.score.should.be.up.to=Проходният резултат трябва да бъде до 100.
+questions.count.should.be.up.to=Броят на въпросите трябва да бъде до 50 въпроса.
+status.should.be.either=Статусът трябва да бъде или ОТВОРЕН или ЗАТВОРЕН.
+#UserSignUpDTO
+password.should.be.at.least=Паролата трябва да бъде поне 8 символа.
