--- a/src/main/resources/i18n/messages_de.properties
+++ b/src/main/resources/i18n/messages_de.properties
@@ -93,3 +93,26 @@ editProfile=Profil bearbeiten
 deleteAccount=Konto löschen
 #user-profile-edit.html
 save=speichern
+#dto exceptions
+property.should.not.be.null=Eigenschaft sollte nicht null sein.
+property.should.not.be.empty=Eigenschaft sollte nicht leer sein.
+property.should.not.be.null.or.empty=Eigenschaft sollte nicht null oder leer sein.
+property.should.be.in.valid.format=Eigenschaft sollte im gültigen Format sein.
+property.should.be.positive=Eigenschaft sollte eine positive Zahl sein.
+#UserProfileDTO
+username.should.be.between=Benutzername sollte zwischen 5 und 25 Zeichen sein.
+user.role.should.be.either=Rolle sollte entweder STANDARD oder ADMINISTRATOR sein.
+#QuestionCreateDTO
+points.should.be.a.number=Punkte sollten eine Zahl sein.
+points.should.be.up.to=Punkte sollten bis zu 100 sein.
+#TestCreateDTO
+test.name.should.be.between=Testname sollte zwischen 5 und 25 Zeichen sein.
+description.should.be.up.to=Beschreibung sollte bis zu 50 Zeichen sein.
+code.should.contain=Code sollte 2 Buchstaben, 2 Ziffern und 2 Sonderzeichen enthalten.
+response.time.should.be.up.to=Antwortzeit sollte bis zu 10 Minuten sein.
+passing.score.should.be=Bestehensnote sollte 0 oder mehr sein.
+passing.score.should.be.up.to=Bestehensnote sollte bis zu 100 sein.
+questions.count.should.be.up.to=Fragenanzahl sollte bis zu 50 Fragen sein.
+status.should.be.either=Status sollte entweder OFFEN oder GESCHLOSSEN sein.
+#UserSignUpDTO
+password.should.be.at.least=Passwort sollte mindestens 8 Zeichen lang sein.
