--- a/src/main/resources/i18n/messages_fr.properties
+++ b/src/main/resources/i18n/messages_fr.properties
@@ -93,3 +93,26 @@ editProfile=Modifier le profil
 deleteAccount=Supprimer le compte
 #user-profile-edit.html
 save=sauvegarder
+#dto exceptions
+property.should.not.be.null=La propriété ne doit pas être nulle.
+property.should.not.be.empty=La propriété ne doit pas être vide.
+property.should.not.be.null.or.empty=La propriété ne doit pas être nulle ou vide.
+property.should.be.in.valid.format=La propriété doit être dans un format valide.
+property.should.be.positive=La propriété doit être un nombre positif.
+#UserProfileDTO
+username.should.be.between=Le nom d'utilisateur doit comporter entre 5 et 25 caractères.
+user.role.should.be.either=Le rôle doit être soit STANDARD soit ADMINISTRATEUR.
+#QuestionCreateDTO
+points.should.be.a.number=Les points doivent être un nombre.
+points.should.be.up.to=Les points doivent être jusqu'à 100.
+#TestCreateDTO
+test.name.should.be.between=Le nom du test doit comporter entre 5 et 25 caractères.
+description.should.be.up.to=La description doit comporter jusqu'à 50 caractères.
+code.should.contain=Le code doit contenir 2 lettres, 2 chiffres et 2 symboles spéciaux.
+response.time.should.be.up.to=Le temps de réponse doit être jusqu'à 10 minutes.
+passing.score.should.be=Le score de passage doit être de 0 ou plus.
+passing.score.should.be.up.to=Le score de passage doit être jusqu'à 100.
+questions.count.should.be.up.to=Le nombre de questions doit être jusqu'à 50 questions.
+status.should.be.either=Le statut doit être soit OUVERT soit FERMÉ.
+#UserSignUpDTO
+password.should.be.at.least=Le mot de passe doit comporter au moins 8 caractères.
