--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -93,3 +93,27 @@ editProfile=Редактировать профиль
 deleteAccount=Удалить аккаунт
 #user-profile-edit.html
 save=сохранить
+#dto exceptions
+property.should.not.be.null=Свойство не должно быть пустым.
+property.should.not.be.empty=Свойство не должно быть пустым.
+property.should.not.be.null.or.empty=Свойство не должно быть пустым или нулевым.
+property.should.be.in.valid.format=Свойство должно быть в допустимом формате.
+property.should.be.positive=Свойство должно быть положительным числом.
+#UserProfileDTO
+username.should.be.between=Имя пользователя должно быть от 5 до 25 символов.
+user.role.should.be.either=Роль должна быть либо СТАНДАРТНОЙ, либо АДМИНИСТРАТОРОМ.
+#QuestionCreateDTO
+points.should.be.a.number=Баллы должны быть числом.
+points.should.be.up.to=Баллы должны быть до 100.
+#TestCreateDTO
+test.name.should.be.between=Название теста должно быть от 5 до 25 символов.
+description.should.be.up.to=Описание должно быть до 50 символов.
+code.should.contain=Код должен содержать 2 буквы, 2 цифры и 2 специальных символа.
+response.time.should.be.up.to=Время для ответа должно быть до 10 минут.
+passing.score.should.be=Проходной балл должен быть 0 или более.
+passing.score.should.be.up.to=Проходной балл должен быть до 100.
+questions.count.should.be.up.to=Количество вопросов должно быть до 50 вопросов.
+status.should.be.either=Статус должен быть либо ОТКРЫТ, либо ЗАКРЫТ.
+#UserSignUpDTO
+password.should.be.at.least=Пароль должен быть не менее 8 символов.
+
