dark theme completed

--- a/TestingEz/src/main/resources/i18n/messages.properties
+++ b/TestingEz/src/main/resources/i18n/messages.properties
@@ -117,6 +117,57 @@ status.should.be.either=Status should be either OPEN or CLOSED.
 #UserSignUpDTO
 password.should.be.at.least=Password should be at least 8 symbols.
 
+all-tests.html
+My Tests
+You don't have any created tests so far.
+details
+
+impr-ideas.html
+Disapprove
+
+my-results.html
+My Results
+You don't have any results to show.
+details
+
+my-tests.html
+My Tests
+You don't have any created tests so far.
+details
+
+show-results.html
+Result Summary
+
+test-details.html
+Description
+Code
+Response Time
+Passing Score
+Questions Count
+Status
+Created At
+Updated At
+Creator
+Points
+Correct answer
+
+test-join.html
+Sorry, you have already attended this test!
+
+user-home.html
+Bored?
+Click the Button Game
+Click the button as many times as you can in 10 seconds!
+Click Me!
+Score:
+Guess the Number Game
+Guess a number between 1 and 100!
+Guess!
+Miscellaneous
+Help us make "TestingEz" better!
+How to improve?
+SEND
+Thanks! Your improvement idea was sent!
 
 
 
