--- a/TestingEz/src/main/resources/i18n/messages.properties
+++ b/TestingEz/src/main/resources/i18n/messages.properties
@@ -13,15 +13,26 @@ features=Features
 pricing=Pricing
 faqs=FAQs
 about=About
+#all-tests.html
+thereArentAnyTestSoFar=There aren't any tests so far.
+details=details
 #failure/success .html
 failureMessage=Oops! Something went wrong...
 successMessage=Everything is alright!
 homePage=Home Page
+#impr-ideas.html
+disapprove=Disapprove
 # index.html
 welcome=Welcome to TestingEz
 slogan=Start testing whomever you want on whatever you want!
 signIn=Sign In
 signUp=Sign Up
+#my-results.html
+youDontHaveAnyResultsToShow=You don't have any results to show.
+date=Date:
+#my-tests.html
+youDontHaveAnyTestsSoFar=You don't have any tests so far.
+lastUpdated=Last updated:
 #question-answer.html
 submit=submit
 #questions-create.html
@@ -35,6 +46,10 @@ correctAnswer=correct answer
 points=points
 complete=Complete
 cancel=Cancel
+#show-results.html
+resultSummary = Result Summary
+score=Score:
+pointss=Points:
 #sign-in.html
 invalidCredentials=invalid credentials
 login=Login
@@ -68,13 +83,17 @@ questionsCount=Questions count:
 status=Status:
 openClosed=(open/closed)
 next=next
+#test-details.html
+responseTime=Response Time:
+updatedAt=Updated At:
+creator=Creator:
+correctAnswerr=Correct answer:
 #test-join.html
 enterTestCode=Enter Test Code:
 join=join
-previousResults=Previous Results:
-showAll=show all
 testNotFound=Sorry, we couldn't find this test!
 testClosed=Sorry, seems like the test is closed!
+testAttended=Sorry, you have already attended this test!
 #test-preview.html
 madeBy=Made by
 createdAt=Created at:
@@ -83,9 +102,21 @@ start=Start
 testOfTheDay=Test Of The Day
 check=check
 miscellaneous=Miscellaneous
-randomFact=Random Fact
-randomJoke=Random Joke
-randomQuote=Random Quote
+bored=Bored?
+clickTheButtonGame=Click the Button Game
+clickTheButtonAsMany=Click the button as many times as you can in 10 seconds!
+clickMe=Click Me!
+guessTheNumberGame=Guess the Number Game
+guessANumberBetween=Guess a number between 1 and 100!
+enterYourGuess=Enter your guess
+guess=Guess!
+randomFact=Random Fact №
+randomJoke=Random Joke №
+randomQuote=Random Quote №
+helpUs=Help us make "TestingEz" better!
+howToImprove=How to improve?
+send=SEND
+thanks=Thanks! Your improvement idea was sent!
 #user-profile.html
 myProfile=My Profile
 change=change
@@ -116,60 +147,6 @@ questions.count.should.be.up.to=Questions count should be up to 50 questions.
 status.should.be.either=Status should be either OPEN or CLOSED.
 #UserSignUpDTO
 password.should.be.at.least=Password should be at least 8 symbols.
-
-all-tests.html
-My Tests
-You don't have any created tests so far.
-details
-
-impr-ideas.html
-Disapprove
-
-my-results.html
-My Results
-You don't have any results to show.
-details
-
-my-tests.html
-My Tests
-You don't have any created tests so far.
-details
-
-show-results.html
-Result Summary
-
-test-details.html
-Description
-Code
-Response Time
-Passing Score
-Questions Count
-Status
-Created At
-Updated At
-Creator
-Points
-Correct answer
-
-test-join.html
-Sorry, you have already attended this test!
-
-user-home.html
-Bored?
-Click the Button Game
-Click the button as many times as you can in 10 seconds!
-Click Me!
-Score:
-Guess the Number Game
-Guess a number between 1 and 100!
-Guess!
-Miscellaneous
-Help us make "TestingEz" better!
-How to improve?
-SEND
-Thanks! Your improvement idea was sent!
-
-
 
 
 
