--- a/TestingEz/src/main/resources/i18n/messages_bg.properties
+++ b/TestingEz/src/main/resources/i18n/messages_bg.properties
@@ -13,20 +13,23 @@ features=Функции
 pricing=Цени
 faqs=ЧЗВ
 about=За нас
-#failure/success .html
-failureMessage=Опа! Нещо се обърка...
+thereArentAnyTestSoFar=Няма налични тестове засега.
+details=подробности
+failureMessage=Упс! Нещо се обърка...
 successMessage=Всичко е наред!
 homePage=Начална страница
-#index.html
+disapprove=Не одобрявам
 welcome=Добре дошли в TestingEz
-slogan=Започнете да тествате когото искате за каквото искате!
+slogan=Започнете да тествате когото искате на каквото искате!
 signIn=Вход
 signUp=Регистрация
-#question-answer.html
+youDontHaveAnyResultsToShow=Нямате резултати за показване.
+date=Дата:
+youDontHaveAnyTestsSoFar=Нямате тестове засега.
+lastUpdated=Последна актуализация:
 submit=изпрати
-#questions-create.html
-questionNumber=Въпрос #
-enterYourQuestion=Въведете вашия въпрос
+questionNumber=Въпрос №
+enterYourQuestion=Въведете въпроса си
 enterAnswer1=Въведете отговор 1
 enterAnswer2=Въведете отговор 2
 enterAnswer3=Въведете отговор 3
@@ -35,18 +38,19 @@ correctAnswer=правилен отговор
 points=точки
 complete=Завърши
 cancel=Отказ
-#sign-in.html
-invalidCredentials=Невалидни данни за вход
+resultSummary=Обобщение на резултатите
+score=Резултат:
+pointss=Точки:
+invalidCredentials=невалидни данни за вход
 login=Вход
 loginUsername=Потребителско име:
 enterUsername=Въведете потребителско име
 loginPassword=Парола:
 enterPassword=Въведете парола
-#sign-up.html
 usernameInUse=Това потребителско име вече е заето.
 passwordsNotMatching=Паролите НЕ съвпадат.
-emailInUse=Този имейл вече се използва.
-phoneInUse=Този телефон вече се използва.
+emailInUse=Този имейл вече е използван.
+phoneInUse=Този телефон вече е използван.
 register=Регистрация
 registerUsername=Потребителско име:
 registerPassword=Парола:
@@ -55,37 +59,48 @@ firstName=Име:
 lastName=Фамилия:
 registerEmail=Имейл:
 registerPhone=Телефон:
-#test-create.html
 testName=Име на теста:
 description=Описание:
-optional=(По избор)
+optional=(Незадължително)
 testCode=Код:
 generate=генериране
 timeForResponse=Време за отговор:
 inMinutes=(в минути)
-passingScore=Проходна оценка:
+passingScore=Изискван резултат за преминаване:
 questionsCount=Брой въпроси:
 status=Статус:
 openClosed=(отворен/затворен)
-next=напред
-#test-join.html
-enterTestCode=Въведете код на теста:
+next=следващ
+responseTime=Време за отговор:
+updatedAt=Актуализиран на:
+creator=Създател:
+correctAnswerr=Правилен отговор:
+enterTestCode=Въведете код за тест:
 join=присъединяване
-previousResults=Предишни резултати:
-showAll=покажи всички
-testNotFound=Съжаляваме, не намерихме този тест!
-testClosed=Съжаляваме, изглежда тестът е затворен!
-#test-preview.html
+testNotFound=Съжаляваме, не можахме да намерим този тест!
+testClosed=Съжаляваме, изглежда, че тестът е затворен!
+testAttended=Съжаляваме, вече сте участвали в този тест!
 madeBy=Създаден от
 createdAt=Създаден на:
-start=Старт
-#user-home.html
+start=Започни
 testOfTheDay=Тест на деня
-check=проверка
+check=провери
 miscellaneous=Разни
-randomFact=Случаен факт
-randomJoke=Случайна шега
-randomQuote=Случайна цитат
+bored=Скучно ли ви е?
+clickTheButtonGame=Игра "Натисни бутона"
+clickTheButtonAsMany=Натискайте бутона колкото можете повече в 10 секунди!
+clickMe=Кликни ме!
+guessTheNumberGame=Игра "Познай числото"
+guessANumberBetween=Познайте число между 1 и 100!
+enterYourGuess=Въведете предположението си
+guess=Предположение!
+randomFact=Случаен факт №
+randomJoke=Случайна шега №
+randomQuote=Случайна цитат №
+helpUs=Помогнете ни да направим "TestingEz" по-добър!
+howToImprove=Как да подобрим?
+send=ИЗПРАТЕТЕ
+thanks=Благодарим ви! Вашата идея за подобрение беше изпратена!
 #user-profile.html
 myProfile=Моят профил
 change=промяна
