--- a/TestingEz/src/main/resources/i18n/messages_de.properties
+++ b/TestingEz/src/main/resources/i18n/messages_de.properties
@@ -13,19 +13,22 @@ features=Funktionen
 pricing=Preise
 faqs=FAQs
 about=Über uns
-#failure/success .html
-failureMessage=Oops! Etwas ist schief gelaufen...
+thereArentAnyTestSoFar=Es gibt noch keine Tests.
+details=Einzelheiten
+failureMessage=Ups! Etwas ist schief gelaufen...
 successMessage=Alles ist in Ordnung!
 homePage=Startseite
-#index.html
+disapprove=Ablehnen
 welcome=Willkommen bei TestingEz
-slogan=Beginnen Sie, wen auch immer Sie möchten worüber auch immer Sie möchten zu testen!
+slogan=Beginnen Sie, jeden zu testen, auf was auch immer Sie wollen!
 signIn=Anmelden
 signUp=Registrieren
-#question-answer.html
-submit=absenden
-#questions-create.html
-questionNumber=Frage #
+youDontHaveAnyResultsToShow=Sie haben keine Ergebnisse zum Anzeigen.
+date=Datum:
+youDontHaveAnyTestsSoFar=Sie haben noch keine Tests.
+lastUpdated=Letzte Aktualisierung:
+submit=einreichen
+questionNumber=Frage Nr.
 enterYourQuestion=Geben Sie Ihre Frage ein
 enterAnswer1=Antwort 1 eingeben
 enterAnswer2=Antwort 2 eingeben
@@ -35,18 +38,19 @@ correctAnswer=richtig Antwort
 points=Punkte
 complete=Fertig
 cancel=Abbrechen
-#sign-in.html
+resultSummary=Ergebnisübersicht
+score=Ergebnis:
+pointss=Punkte:
 invalidCredentials=Ungültige Anmeldedaten
 login=Anmelden
 loginUsername=Benutzername:
-enterUsername=Benutzername eingeben
+enterUsername=Benutzernamen eingeben
 loginPassword=Passwort:
 enterPassword=Passwort eingeben
-#sign-up.html
 usernameInUse=Dieser Benutzername ist bereits vergeben.
 passwordsNotMatching=Passwörter stimmen NICHT überein.
 emailInUse=Diese E-Mail wird bereits verwendet.
-phoneInUse=Diese Telefonnummer wird bereits verwendet.
+phoneInUse=Dieses Telefon wird bereits verwendet.
 register=Registrieren
 registerUsername=Benutzername:
 registerPassword=Passwort:
@@ -54,8 +58,7 @@ confirmPassword=Passwort bestätigen:
 firstName=Vorname:
 lastName=Nachname:
 registerEmail=E-Mail:
-registerPhone=Telefonnummer:
-#test-create.html
+registerPhone=Telefon:
 testName=Testname:
 description=Beschreibung:
 optional=(Optional)
@@ -63,29 +66,41 @@ testCode=Code:
 generate=generieren
 timeForResponse=Antwortzeit:
 inMinutes=(in Minuten)
-passingScore=Bestehensnote:
+passingScore=Bestandene Punktzahl:
 questionsCount=Anzahl der Fragen:
 status=Status:
 openClosed=(offen/geschlossen)
 next=weiter
-#test-join.html
+responseTime=Antwortzeit:
+updatedAt=Aktualisiert am:
+creator=Ersteller:
+correctAnswerr=Richtige Antwort:
 enterTestCode=Testcode eingeben:
 join=beitreten
-previousResults=Vorherige Ergebnisse:
-showAll=alle anzeigen
 testNotFound=Entschuldigung, wir konnten diesen Test nicht finden!
-testClosed=Entschuldigung, der Test scheint geschlossen zu sein!
-#test-preview.html
+testClosed=Entschuldigung, scheint, dass der Test geschlossen ist!
+testAttended=Entschuldigung, Sie haben diesen Test bereits besucht!
 madeBy=Erstellt von
 createdAt=Erstellt am:
 start=Start
-#user-home.html
 testOfTheDay=Test des Tages
-check=prüfen
+check=überprüfen
 miscellaneous=Verschiedenes
-randomFact=Zufälliger Fakt
-randomJoke=Zufälliger Witz
-randomQuote=Zufälliges Zitat
+bored=Langweilig?
+clickTheButtonGame=Klick den Button Spiel
+clickTheButtonAsMany=Klicken Sie den Button so oft Sie können in 10 Sekunden!
+clickMe=Klick mich!
+guessTheNumberGame=Zahl raten Spiel
+guessANumberBetween=Erraten Sie eine Zahl zwischen 1 und 100!
+enterYourGuess=Geben Sie Ihre Vermutung ein
+guess=Raten!
+randomFact=Zufälliger Fakt Nr.
+randomJoke=Zufälliger Witz Nr.
+randomQuote=Zufälliger Zitat Nr.
+helpUs=Helfen Sie uns, "TestingEz" zu verbessern!
+howToImprove=Wie zu verbessern?
+send=Senden
+thanks=Danke! Ihre Verbesserungsidee wurde gesendet!
 #user-profile.html
 myProfile=Mein Profil
 change=ändern
