--- a/TestingEz/src/main/resources/i18n/messages_fr.properties
+++ b/TestingEz/src/main/resources/i18n/messages_fr.properties
@@ -13,19 +13,22 @@ features=Caractéristiques
 pricing=Tarification
 faqs=FAQs
 about=À propos
-#failure/success .html
-failureMessage=Oups! Quelque chose a mal tourné...
+thereArentAnyTestSoFar=Il n'y a pas encore de tests.
+details=détails
+failureMessage=Oups! Quelque chose s'est mal passé...
 successMessage=Tout va bien!
 homePage=Page d'accueil
-#index.html
-welcome=Bienvenue sur TestingEz
+disapprove=Désapprouver
+welcome=Bienvenue chez TestingEz
 slogan=Commencez à tester qui vous voulez sur ce que vous voulez!
 signIn=Se connecter
 signUp=S'inscrire
-#question-answer.html
+youDontHaveAnyResultsToShow=Vous n'avez aucun résultat à afficher.
+date=Date:
+youDontHaveAnyTestsSoFar=Vous n'avez pas encore de tests.
+lastUpdated=Dernière mise à jour:
 submit=soumettre
-#questions-create.html
-questionNumber=Question #
+questionNumber=Question n°
 enterYourQuestion=Entrez votre question
 enterAnswer1=Entrez la réponse 1
 enterAnswer2=Entrez la réponse 2
@@ -35,30 +38,30 @@ correctAnswer=bonne réponse
 points=points
 complete=Terminer
 cancel=Annuler
-#sign-in.html
-invalidCredentials=Identifiants invalides
+resultSummary=Résumé des résultats
+score=Score:
+pointss=Points:
+invalidCredentials=identifiants invalides
 login=Connexion
 loginUsername=Nom d'utilisateur:
 enterUsername=Entrez le nom d'utilisateur
 loginPassword=Mot de passe:
 enterPassword=Entrez le mot de passe
-#sign-up.html
-usernameInUse=Ce nom d'utilisateur est déjà pris.
-passwordsNotMatching=Les mots de passe ne correspondent PAS.
+usernameInUse=Ce nom d'utilisateur est déjà utilisé.
+passwordsNotMatching=Les mots de passe NE correspondent PAS.
 emailInUse=Cet e-mail est déjà utilisé.
 phoneInUse=Ce téléphone est déjà utilisé.
 register=Inscription
 registerUsername=Nom d'utilisateur:
 registerPassword=Mot de passe:
-confirmPassword=Confirmez le mot de passe:
+confirmPassword=Confirmer le mot de passe:
 firstName=Prénom:
 lastName=Nom de famille:
 registerEmail=E-mail:
 registerPhone=Téléphone:
-#test-create.html
 testName=Nom du test:
 description=Description:
-optional=(Facultatif)
+optional=(Optionnel)
 testCode=Code:
 generate=générer
 timeForResponse=Temps de réponse:
@@ -68,24 +71,36 @@ questionsCount=Nombre de questions:
 status=Statut:
 openClosed=(ouvert/fermé)
 next=suivant
-#test-join.html
+responseTime=Temps de réponse:
+updatedAt=Mis à jour à:
+creator=Créateur:
+correctAnswerr=Bonne réponse:
 enterTestCode=Entrez le code du test:
 join=rejoindre
-previousResults=Résultats précédents:
-showAll=montrer tout
 testNotFound=Désolé, nous n'avons pas trouvé ce test!
-testClosed=Désolé, le test semble fermé!
-#test-preview.html
-madeBy=Créé par
-createdAt=Créé le:
-start=Démarrer
-#user-home.html
+testClosed=Désolé, il semble que le test soit fermé!
+testAttended=Désolé, vous avez déjà assisté à ce test!
+madeBy=Fait par
+createdAt=Créé à:
+start=Commencer
 testOfTheDay=Test du jour
 check=vérifier
 miscellaneous=Divers
-randomFact=Fait aléatoire
-randomJoke=Blague aléatoire
-randomQuote=Citation aléatoire
+bored=Ennuyé?
+clickTheButtonGame=Jeu "Cliquez sur le bouton"
+clickTheButtonAsMany=Cliquez sur le bouton autant de fois que possible en 10 secondes!
+clickMe=Cliquez-moi!
+guessTheNumberGame=Jeu "Devinez le nombre"
+guessANumberBetween=Devinez un nombre entre 1 et 100!
+enterYourGuess=Entrez votre supposition
+guess=Deviner!
+randomFact=Fait aléatoire n°
+randomJoke=Blague aléatoire n°
+randomQuote=Citation aléatoire n°
+helpUs=Aidez-nous à rendre "TestingEz" meilleur!
+howToImprove=Comment améliorer?
+send=ENVOYER
+thanks=Merci! Votre idée d'amélioration a été envoyée!
 #user-profile.html
 myProfile=Mon profil
 change=changer
