--- a/TestingEz/src/main/resources/i18n/messages_ru.properties
+++ b/TestingEz/src/main/resources/i18n/messages_ru.properties
@@ -13,20 +13,23 @@ features=Функции
 pricing=Цены
 faqs=FAQs
 about=О нас
-#failure/success .html
-failureMessage=Ой! Что-то пошло не так...
+thereArentAnyTestSoFar=Пока нет ни одного теста.
+details=детали
+failureMessage=Упс! Что-то пошло не так...
 successMessage=Все в порядке!
-homePage=Домашняя страница
-#index.html
+homePage=Главная страница
+disapprove=Не одобрять
 welcome=Добро пожаловать в TestingEz
 slogan=Начните тестировать кого угодно на что угодно!
 signIn=Войти
 signUp=Зарегистрироваться
-#question-answer.html
+youDontHaveAnyResultsToShow=У вас нет результатов для показа.
+date=Дата:
+youDontHaveAnyTestsSoFar=Пока нет ни одного теста.
+lastUpdated=Последнее обновление:
 submit=отправить
-#questions-create.html
 questionNumber=Вопрос №
-enterYourQuestion=Введите ваш вопрос
+enterYourQuestion=Введите свой вопрос
 enterAnswer1=Введите ответ 1
 enterAnswer2=Введите ответ 2
 enterAnswer3=Введите ответ 3
@@ -35,57 +38,69 @@ correctAnswer=правильный ответ
 points=баллы
 complete=Завершить
 cancel=Отмена
-#sign-in.html
+resultSummary=Сводка результатов
+score=Оценка:
+pointss=Баллы:
 invalidCredentials=Неверные учетные данные
-login=Вход
+login=Войти
 loginUsername=Имя пользователя:
 enterUsername=Введите имя пользователя
 loginPassword=Пароль:
 enterPassword=Введите пароль
-#sign-up.html
-usernameInUse=Это имя пользователя уже занято.
+usernameInUse=Это имя пользователя уже используется.
 passwordsNotMatching=Пароли НЕ совпадают.
-emailInUse=Этот email уже используется.
+emailInUse=Этот адрес электронной почты уже используется.
 phoneInUse=Этот телефон уже используется.
-register=Регистрация
+register=Зарегистрироваться
 registerUsername=Имя пользователя:
 registerPassword=Пароль:
 confirmPassword=Подтвердите пароль:
 firstName=Имя:
 lastName=Фамилия:
-registerEmail=Эл. почта:
+registerEmail=Электронная почта:
 registerPhone=Телефон:
-#test-create.html
 testName=Название теста:
 description=Описание:
 optional=(Необязательно)
 testCode=Код:
-generate=генерировать
-timeForResponse=Время для ответа:
+generate=создать
+timeForResponse=Время на ответ:
 inMinutes=(в минутах)
 passingScore=Проходной балл:
 questionsCount=Количество вопросов:
 status=Статус:
 openClosed=(открыт/закрыт)
 next=далее
-#test-join.html
+responseTime=Время ответа:
+updatedAt=Обновлено:
+creator=Создатель:
+correctAnswerr=Правильный ответ:
 enterTestCode=Введите код теста:
 join=присоединиться
-previousResults=Предыдущие результаты:
-showAll=показать все
 testNotFound=Извините, мы не смогли найти этот тест!
-testClosed=Извините, кажется, тест закрыт!
-#test-preview.html
-madeBy=Создано
+testClosed=Извините, похоже, тест закрыт!
+testAttended=Извините, вы уже прошли этот тест!
+madeBy=Сделано
 createdAt=Создано:
 start=Начать
-#user-home.html
 testOfTheDay=Тест дня
 check=проверить
 miscellaneous=Разное
-randomFact=Случайный факт
-randomJoke=Случайная шутка
-randomQuote=Случайная цитата
+bored=Скучно?
+clickTheButtonGame=Игра "Нажми на кнопку"
+clickTheButtonAsMany=Нажимайте на кнопку как можно больше раз за 10 секунд!
+clickMe=Нажми на меня!
+guessTheNumberGame=Игра "Угадай число"
+guessANumberBetween=Угадайте число от 1 до 100!
+enterYourGuess=Введите свою догадку
+guess=Угадать!
+randomFact=Случайный факт №
+randomJoke=Случайная шутка №
+randomQuote=Случайная цитата №
+helpUs=Помогите нам сделать "TestingEz" лучше!
+howToImprove=Как улучшить?
+send=ОТПРАВИТЬ
+thanks=Спасибо! Ваша идея по улучшению была отправлена!
 #user-profile.html
 myProfile=Мой профиль
 change=изменить
