logic implemented behind button 'Delete Account'

--- a/TestingEz/src/main/resources/i18n/messages.properties
+++ b/TestingEz/src/main/resources/i18n/messages.properties
@@ -124,6 +124,10 @@ editProfile=Edit profile
 deleteAccount=Delete Account
 #user-profile-edit.html
 save=save
+#account-delete.html
+pleaseType=Please, type the following:
+confirmation=I DEFINITELY want to DELETE my ACCOUNT.
+confirm=Confirm
 #dto exceptions
 property.should.not.be.null=Property should not be null.
 property.should.not.be.empty=Property should not be empty.
