--- a/TestingEz/src/main/resources/i18n/messages_bg.properties
+++ b/TestingEz/src/main/resources/i18n/messages_bg.properties
@@ -108,6 +108,10 @@ editProfile=Редактиране на профил
 deleteAccount=Изтриване на акаунт
 #user-profile-edit.html
 save=запази
+#account-delete.html
+pleaseType=Моля, въведете следното:
+confirmation=Определено искам да ИЗТРИЯ акаунта си.
+confirm=Потвърдете
 #dto exceptions
 property.should.not.be.null=Свойството не трябва да бъде нулево.
 property.should.not.be.empty=Свойството не трябва да бъде празно.
