--- a/TestingEz/src/main/resources/i18n/messages_de.properties
+++ b/TestingEz/src/main/resources/i18n/messages_de.properties
@@ -108,6 +108,10 @@ editProfile=Profil bearbeiten
 deleteAccount=Konto löschen
 #user-profile-edit.html
 save=speichern
+#account-delete.html
+pleaseType=Bitte geben Sie Folgendes ein:
+confirmation=Ich möchte DEFINITIV mein KONTO LÖSCHEN.
+confirm=Bestätigen
 #dto exceptions
 property.should.not.be.null=Eigenschaft sollte nicht null sein.
 property.should.not.be.empty=Eigenschaft sollte nicht leer sein.
