--- a/TestingEz/src/main/resources/i18n/messages_fr.properties
+++ b/TestingEz/src/main/resources/i18n/messages_fr.properties
@@ -108,6 +108,10 @@ editProfile=Modifier le profil
 deleteAccount=Supprimer le compte
 #user-profile-edit.html
 save=sauvegarder
+#account-delete.html
+pleaseType=Veuillez taper ce qui suit :
+confirmation=Je VEUX DÉFINITIVEMENT SUPPRIMER MON COMPTE.
+confirm=Confirmer
 #dto exceptions
 property.should.not.be.null=La propriété ne doit pas être nulle.
 property.should.not.be.empty=La propriété ne doit pas être vide.
