--- a/TestingEz/src/main/resources/i18n/messages_ru.properties
+++ b/TestingEz/src/main/resources/i18n/messages_ru.properties
@@ -108,6 +108,10 @@ editProfile=Редактировать профиль
 deleteAccount=Удалить аккаунт
 #user-profile-edit.html
 save=сохранить
+#account-delete.html
+pleaseType=Пожалуйста, введите следующее:
+confirmation=Я ОДНОЗНАЧНО хочу УДАЛИТЬ СВОЙ АККАУНТ.
+confirm=Подтвердить
 #dto exceptions
 property.should.not.be.null=Свойство не должно быть пустым.
 property.should.not.be.empty=Свойство не должно быть пустым.
